motion planning wip

--- a/me326_locobot_group5/CMakeLists.txt
+++ b/me326_locobot_group5/CMakeLists.txt
@@ -50,14 +50,19 @@ catkin_python_setup()
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  Block.msg
+  BlockArray.msg
+)
 
 ## Generate services in the 'srv' folder
-add_service_files()
+add_service_files(
+  FILES
+  BlockSrv.srv
+  FollowPath.srv
+  TurnHeading.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
